JWT security test, mapper